Update index.html after so long...

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+    <title>zaero website thing</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,18 +15,18 @@
     <nav>
         <ul>
             <li><a href="https://www.roblox.com/users/4428263827/profile">Roblox</a></li>
-            <li><a href="https://www.tiktok.com/@random_guy9905">TikTok</a></li>
-            <li><a href="https://www.instagram.com/una_persona2077?igsh=NWRtemkwMGWhbm05">Instagram</a></li>
+            <li><a href="https://www.tiktok.com/@zaerothing69420">TikTok</a></li>
         </ul>
     </nav>
     <img src="https://tr.rbxcdn.com/758db2dfb17aef819920109db01e6cd8/420/420/Decal/Png" width="250" height="250" class="cat">
-    <p class="one">im a beginner programmer, hence why it looks horrible, i play roblox a lot and im mostly on discord too, so feel free to add me. (alguien0609)</p>
+    <p class="one">im a beginner programmer, hence why it looks horrible, i play roblox and minecraft a lot and im mostly on discord too (zaerothing), so feel free to add me on there. i also speak english and spanish, and a bit of portuguese too...</p>
     <p class="two">i dont have that much devices, really, but im kind of on tech too.</p>
     <h3 class="three">devices:</h3>
     <ul class="four">
-        <li>gayming pc (LoL!)</li>
-        <li>Lenovo G470 with linux mint</li>
+        <li>a pretty good pc</li>
+        <li>Lenovo G470 with arch (btw)</li> <!-- WHEN WILL I GET A THINKPAD OH MY GOD -->
         <li>Samsung Galaxy A34 5G</li>
+        <li><s>Samsung Galaxy J7 2015</s></li>
     </ul>
     <center>
         <h1 class="five">yeah, im not gonna get into detail. thats all.</h1>
